<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/account_overview_configure_loading" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:layout_centerInParent="true" android:textAlignment="center" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/account_overview_configure_actions" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/account_overview_configure_title" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/account_overview_configure_title" android:textAllCaps="false" android:fontFamily="@font/circular_std_book" android:textAlignment="center" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_individual" android:background="@drawable/account_overview_configure_button" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="4.0dip" android:layout_weight="1.0" android:contentDescription="@string/select_your_individual_spending_account">
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:src="@drawable/up_on_dark" android:contentDescription="@string/_2up_logo" />
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spending" android:fontFamily="@font/circular_std_book" android:textAlignment="center" />
        </LinearLayout>
        <View android:id="@id/divider" android:background="#ffe8e8e8" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_marginHorizontal="12.0dip" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_joint" android:background="@drawable/account_overview_configure_button" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="4.0dip" android:layout_weight="1.0" android:contentDescription="@string/select_your_2up_account">
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:src="@drawable/joint_on_dark" android:contentDescription="@string/_2up_logo" />
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/joint_spending" android:fontFamily="@font/circular_std_book" android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>